<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    >

    <ImageView
        android:id="@+id/moviePoster"
        android:layout_width="127dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_pic"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/movieRank"
        android:layout_width="45dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:text="@string/telRank"
        android:textColor="#E41515" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="130dp"
        android:layout_height="250dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/moviePoster"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/movieName" />

        <TextView
            android:id="@+id/mDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/director" />

        <TextView
            android:id="@+id/mArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/movieArea" />

        <TextView
            android:id="@+id/mActor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/movieActor" />

        <TextView
            android:id="@+id/movieType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/movieType" />

        <TextView
            android:id="@+id/mStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/movieStartTime" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="1dp"
        android:layout_height="200dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:background="#AFABAB" />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="314dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/bt_style"
        android:text="@string/ticket" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="185dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/hotImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/hot" />

        <TextView
            android:id="@+id/hot"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:gravity="center" />
    </LinearLayout>


</RelativeLayout>