<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    >

    <ImageView
        android:id="@+id/poster"
        android:layout_width="113dp"
        android:layout_height="160dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        tools:ignore="ContentDescription"
        android:src="@drawable/ic_pic"
        />

    <TextView
        android:id="@+id/telRank"
        android:layout_width="45dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:text="@string/telRank"
        android:textColor="#E41515" />
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="131dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/poster"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/telName" />

        <TextView
            android:id="@+id/actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/telActor" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/telStartTime" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="1dp"
        android:layout_height="130dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:background="#AFABAB" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/hotImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/hot" />

        <TextView
            android:id="@+id/hot"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:gravity="center" />
    </LinearLayout>


</RelativeLayout>